<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_common_search"
        android:orderInCategory="100"
        android:title="@string/menu_common_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_isbn_search"
        android:orderInCategory="100"
        android:title="@string/menu_isbn_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_dingzhi_search"
        android:orderInCategory="100"
        android:title="@string/menu_dingzhi"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_shouqi_search"
        android:orderInCategory="100"
        android:title="@string/menu_shouqi_search"
        app:showAsAction="never" />
</menu>