<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E6F6"
    android:orientation="vertical">


    <com.xuewen.kidsbook.view.BookItemView
        android:layout_width="match_parent"
        android:layout_height="300px">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/imageCDesc"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/zhidao_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bookName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bookDesc" />

    </com.xuewen.kidsbook.view.BookItemView>

</LinearLayout>