<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/sexy_seceletor_title"
            android:textSize="18dp"/>

        <include layout="@layout/common_line" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioBtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexy_father" />
            <RadioButton
                android:id="@+id/radioBtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexy_mother" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>