<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eee"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--
    <LinearLayout
        android:background="@color/common_title_bg2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">
        -->
    <LinearLayout
        android:background="@color/custom_white"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/common_title_left_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="14.0dip"
            android:paddingRight="10.0dip">

            <ImageView
                android:id="@+id/common_title_left_btn_icon"
                android:background="@drawable/commont_title_back"
                android:layout_width="22.0dip"
                android:layout_height="22.0dip"
                android:contentDescription="@string/back_btn_text" />
        </LinearLayout>

        <FrameLayout

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/search_et_input"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/common_search_icon"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/search_edittext_shape"
                android:textSize="12sp"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/search_hint_text" />

            <ImageView
                android:visibility="gone"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/global_edit_clear_selector"
                android:id="@+id/search_iv_delete"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/search_iv_delete_desc" />
        </FrameLayout>

        <Button
            android:id="@+id/search_btn"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_search_bg"
            android:layout_width="48dp"
            android:layout_height="30dp"
            android:text="@string/search_btn_text"
            android:textColor="@color/black"/>
    </LinearLayout>

    <include layout="@layout/common_line" />

    <!--
    <ListView
        android:visibility="gone"
        android:id="@+id/search_lv_tips"
        android:background="@drawable/search_edittext_shape"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </ListView>
    -->

    <ListView
        android:visibility="gone"
        android:id="@+id/search_lv_tips"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </ListView>

    <LinearLayout
        android:id="@+id/hot_search_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="热门搜索"
                android:textColor="#4d4d4d"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:layout_marginTop="10dp"
            android:paddingRight="10dp">

            <com.xuewen.kidsbook.view.LineWrapLayoutHotDishSearch
                android:id="@+id/hot_search_dish_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left">

            </com.xuewen.kidsbook.view.LineWrapLayoutHotDishSearch>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>