<?xml version="1.0" encoding="utf-8"?>

<!-- 底部tab -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_tab"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:background="@color/black">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_bottom_tab_essence"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1.0"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_tab_select_normal" />

        <ImageView
            android:id="@+id/iv_bottom_tab_crowd"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1.0"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_book" />

        <ImageView
            android:id="@+id/iv_bottom_tab_activity"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1.0"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_tab_activity" />

        <ImageView
            android:id="@+id/iv_bottom_tab_study"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1.0"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/title_left_personal_center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bottom_tab_essence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/bottom_essence"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_bottom_tab_crowd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/bottom_tab_crowd"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_bottom_tab_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/bottom_tab_activity"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_bottom_tab_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/bottom_tab_study"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <!--
    <RelativeLayout
        android:id="@+id/bottom_tab_daily"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

        <ImageView
            android:id="@+id/iv_bottom_tab_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/btn_know_nor" />

        <TextView
            android:id="@+id/tv_bottom_tab_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_bottom_tab_daily"
            android:layout_centerHorizontal="true"
            android:text="@string/bottom_essence"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_tab_latest"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0">

        <ImageView
            android:id="@+id/iv_bottom_tab_latest"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_book" />

        <TextView
            android:id="@+id/tv_bottom_tab_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_bottom_tab_latest"
            android:layout_centerHorizontal="true"
            android:text="@string/bottom_tab_crowd"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_tab_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

        <ImageView
            android:id="@+id/iv_bottom_tab_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/btn_my_nor" />

        <TextView
            android:id="@+id/tv_bottom_tab_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_bottom_tab_list"
            android:layout_centerHorizontal="true"
            android:text="@string/bottom_tab_activity"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_tab_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

        <ImageView
            android:id="@+id/iv_bottom_tab_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/btn_my_nor" />

        <TextView
            android:id="@+id/tv_bottom_tab_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_bottom_tab_me"
            android:layout_centerHorizontal="true"
            android:text="@string/bottom_tab_my"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>
    -->
</LinearLayout>